--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["backend/**/*.ts"],
+  "exclude": ["node_modules", "**/*.test.ts"]
 }
