--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
+    "console": "ts-node",
     "build": "tsc",
     "test": "jest"
   },
@@ -12,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alchemy-sdk": "^3.3.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
