--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "nodemon",
     "console": "ts-node",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "test:unit": "jest --testPathPattern=__tests__/unit",
+    "test:integration": "jest --testPathPattern=__tests__/integration"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
   "dependencies": {
     "alchemy-sdk": "^3.3.1",
     "axios": "^1.7.2",
+    "axios-mock-adapter": "^1.22.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
     "express": "^4.19.2"
