DEV-1 Add env variables to the workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      API_KEY: $${{ secrets.API_KEY}}
+      TESTING_ADDRESS: $${{ secrets.TESTING_ADDRESS }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
