DEV-1: print env variables

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,12 @@ jobs:
       TESTING_ADDRESS: $${{ secrets.TESTING_ADDRESS }}
 
     steps:
+      - name: Print api key
+        run: printenv | grep API_KEY
+
+      - name: Print testing address
+        run: printenv | grep TESTING_ADDRESS
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -33,6 +39,6 @@ jobs:
 
       - name: Run unit tests
         run: npm run test:unit
-      
+
       - name: Run integration tests
         run: npm run test:integration
