--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,12 @@ jobs:
       - name: Compile TypeScript
         run: npm run build
 
+      - name: Print env variables
+        run: printenv | grep API_KEY
+      
+      - name: Print testing address
+        run: printenv | grep TESTING_ADDRESS
+
       - name: Run unit tests
         run: npm run test:unit
       
