DEV-1 skip running integration tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,12 +33,12 @@ jobs:
 
       - name: Print env variables
         run: printenv | grep API_KEY
-      
+
       - name: Print testing address
         run: printenv | grep TESTING_ADDRESS
 
       - name: Run unit tests
         run: npm run test:unit
-      
-      - name: Run integration tests
-        run: npm run test:integration
+
+      # - name: Run integration tests
+      #   run: npm run test:integration
