--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
-    "console": "ts-node",
+    "console": "ts-node start-repl.js",
     "build": "tsc",
     "test": "jest",
     "test:unit": "jest --testPathPattern=__tests__/unit",
