--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "test": "jest",
     "test:unit": "jest --testPathPattern=__tests__/unit",
-    "test:integration": "jest --testPathPattern=__tests__/integration"
+    "test:integration": "jest --testPathPattern=__tests__/integration",
+    "test:integration:file": "jest $TEST_FILE"
   },
   "keywords": [],
   "author": "",
