--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
-    "console": "ts-node",
+    "console": "ts-node start-repl.js",
     "build": "tsc",
     "test": "jest",
     "test:unit": "jest --testPathPattern=__tests__/unit",
-    "test:integration": "jest --testPathPattern=__tests__/integration"
+    "test:integration": "jest --testPathPattern=__tests__/integration",
+    "test:integration:file": "jest $TEST_FILE"
   },
   "keywords": [],
   "author": "",
