--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ jobs:
 
     env:
       API_KEY: $${{ secrets.API_KEY}}
-      TESTING_ADDRESS: $${{ secrets.TESTING_ADDRESS }}
+      TESTING_ADDRESS: "0xdFd1656602DB564661522daAd0ADB0b98d581050"
+      # TESTING_ADDRESS: $${{ secrets.TESTING_ADDRESS }}
 
     steps:
       - name: Checkout repository
