--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      API_KEY: $${{ secrets.API_KEY }}
-      TESTING_ADDRESS: $${{ secrets.TESTING_ADDRESS }}
+      API_KEY: ${{ secrets.API_KEY }}
+      TESTING_ADDRESS: ${{ secrets.TESTING_ADDRESS }}
 
     steps:
       - name: Checkout repository
@@ -32,13 +32,14 @@ jobs:
         run: npm run build
 
       - name: Print env variables
-        run: printenv | grep API_KEY
+        run: |
+          echo "API_KEY is set to: $API_KEY"
+          echo "TESTING_ADDRESS is set to: $TESTING_ADDRESS"
 
-      - name: Print testing address
-        run: printenv | grep TESTING_ADDRESS
-
-      # - name: Run unit tests
-      #   run: npm run test:unit
+      - name: Check env variables
+        run: |
+          if [ -z "$API_KEY" ]; then echo "API_KEY is not set"; else echo "API_KEY is set"; fi
+          if [ -z "$TESTING_ADDRESS" ]; then echo "TESTING_ADDRESS is not set"; else echo "TESTING_ADDRESS is set"; fi
 
       - name: Run integration tests
         run: npm run test:integration
